[package]
name = "world-map-gen"
version = "0.1.0"
authors = ["rhysd <https://rhysd.github.io>"]
edition = "2018"

[[bin]]
path = "src/main.rs"
name = "world-map-gen"

[lib]
# Append cdylib for adding WebAssembly target
crate-type = ["cdylib", "lib"]

[dependencies]
termcolor = "1.0.4"
lazy_static = "1.2.0"
clap = "2.32.0"
term_size = "0.3.1"
serde = "1.0.84"
serde_json = "1.0.34"
serde_derive = "1.0.84"
termcolor2rgb = "1.0.1"
cfg-if = "0.1.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.6.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.32"
rand = { version = "0.6.4", default-features = false, features = ["wasm-bindgen"] }
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
cargo-husky = "1.2.1"
