[package]
name = "world-map-gen"
version = "0.1.0"
authors = ["rhysd <https://rhysd.github.io>"]
edition = "2018"
description = "Command line tool and library to generate random game world maps for both Rust and WebAssembly"
categories = ["command-line-utilities", "rendering", "wasm"]
repository = "https://github.com/rhysd/world-map-gen"
readme = "README.md"
include = ["/src/**/*.rs", "/Cargo.toml", "/LICENSE.txt"]
license = "MIT"

[package.metadata.release]
no-dev-version = true

[[bin]]
path = "src/main.rs"
name = "world-map-gen"

[lib]
# Append cdylib for adding WebAssembly target
crate-type = ["cdylib", "lib"]

[features]
default = []
wasm_debug = ["console_error_panic_hook", "web-sys"]

[dependencies]
termcolor = "1.0.4"
lazy_static = "1.2.0"
clap = "2.32.0"
term_size = "0.3.1"
serde = "1.0.85"
serde_json = "1.0.37"
serde_derive = "1.0.85"
termcolor2rgb = "1.0.1"
cfg-if = "0.1.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.6.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.33"
rand = { version = "0.6.4", default-features = false, features = ["wasm-bindgen"] }
wee_alloc = { version = "0.4.2", optional = true }
console_error_panic_hook = { version = "0.1.5", optional = true }
web-sys = { version = "0.3.10", features = ["console"], optional = true }

[dev-dependencies]
cargo-husky = "1.3.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.2.33"

[badges]
maintenance = { status = "passively-maintained" }
travis-ci = { repository = "rhysd/world-map-gen" }
appveyor = { repository = "rhysd/world-map-gen" }
